# NiaClass

./: .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  contributing.rst  getting_started.rst  index.rst  installation.rst  requirements.txt  testing.rst
docs/api/: index.rst  niaclass.rst
examples/: basic_run.py
niaclass/: __init__.py  feature_info.py  niaclass.py  rule.py
niaclass/tests/: test_feature_info.py  test_rule.py  test_run.py
tests/: test_niaclass.py
