[tool.poetry]
name = "niaclass"
version = "0.1.0"
description = ""
authors = ["Luka PeÄnik <lukapecnik96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
NiaPy = "^2.0.0rc12"
pandas = "^1.2.1"
numpy = "^1.20.0"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
coveralls = "^3.0.1"
Sphinx = "^3.5.1"
sphinx-rtd-theme = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
